--- a/index.html
+++ b/index.html
@@ -86,3 +86,9 @@ pagination:
 
 </div>
 </div>
+<script>
+  $(function() {
+    console.log('This the some page');
+    console.log(`{{ paginator | jsonify }}`)
+  });
+</script>
