--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ pagination:
 <script>
   window.addEventListener("DOMContentLoaded", function () {
     console.log('This the some page');
-    console.log(`{{ paginator | jsonify }}`)
+    console.log(`{{ paginator | jsonify }}`);
+    console.log(`{{ site | jsonify }}`);
   });
 </script>
