--- a/index.html
+++ b/index.html
@@ -86,3 +86,9 @@ pagination:
 
 </div>
 </div>
+<script>
+  window.addEventListener("DOMContentLoaded", function () {
+    console.log('This the some page');
+    console.log(`{{ site | jsonify }}`);
+  });
+</script>
