--- a/index.html
+++ b/index.html
@@ -89,6 +89,6 @@ pagination:
 <script>
   window.addEventListener("DOMContentLoaded", function () {
     console.log('This the some page');
-    console.log(`{{ site | jsonify }}`);
+    console.log(`{{ site.keys() | jsonify }}`);
   });
 </script>
